# P02-Rust-Firmware

./: .gitignore  Cargo.toml  README.md  STUDY_GUIDE.md
src/: error.rs  main.rs  sensor.rs  serial.rs
